# website-archiet

./: .gitignore  ArchieT.key  ArchieT.key.asc  ArchieT.key.sig  README.md  _mkfssg.toml  _redirects  build.boot  builder.py  config.toml  default.nix  index.en.html  index.html  index.php  index.pl.html  keybase.txt  mix.exs  naszgtm.js  netlify.toml  package.json  portfolio.html  sitemap.xml  strapdown.css  styles.css  wakatimeget.js  watcher.pl  website-mat-umk-archiet.cabal  yerba.html
.deliver/: config
config/: application.rb  cable.yml  config.exs  credentials.yml.enc  dev.exs  prod.exs  test.exs
config/environments/: production.rb
content/: kontakt.en.html  kontakt.html  omnie.en.html  sledz.en.html  sledz.html
content/photosofme/: _index.md  babiogorskipn2015.md  calynabialo2017.md  choinka20140109.md  czekajac20171128.md  dechy20170510.md  dowodowe2017.md  img20170530.md  jawmiiumk20171208.md  nexs2013.md  putnet20170522.md  tfnis2017.md  the2012photo.md
content/posts/: testowy.md
content/skille/: _index.md  go.md  vcs.md
data/: about.toml  index.json
i18n/: en.toml  pl.toml
layouts/: about.gohtml  base.gohtml
lib/: website_archiet.ex
now/: index.html
old-clj/: .htaccess  boot.properties  build.boot
old_before_ruby/: config.toml
prv/: index.html
pylib4aarchiet/: strjezykowe.py
resources/: keybase.txt  styles.css
static/: styles.css
templ/: baseof.html.j2  favicons.html  index.html.j2  kontakt.html.j2
templates/: about.gohtml  about.html  base.gohtml  base.html
test/: test_helper.exs
web/: gettext.ex  router.ex  web.ex
(+118 files in other folders)
