name: website-mat-umk-archiet
version: 0.0.1
synopsis: My university website
-- description:
homepage: http://mat.umk.pl/~archiet
author: Michał Krzysztof Feiler
maintainer: archiet@mat.umk.pl
-- copyright:
category: Web
build-type: Simple
cabal-version: >=1.0

executable site
  main-is: site-hs
  hs-source-dirs: src/
  ghc-options: -O2 -Wall -threaded
  -- other-modules:
  build-depends: base,
                       hakyll >= 4.5.1.0,
                       pandoc >= 1.12.3.3,
                       containers >= 0.5.5.1,
                       directory >= 1.2.1
